--- a/.classpath
+++ b/.classpath
@@ -35,7 +35,7 @@
   <classpathentry kind="var" path="M2_REPO/ch/qos/logback/logback-classic/1.0.11/logback-classic-1.0.11.jar" sourcepath="M2_REPO/ch/qos/logback/logback-classic/1.0.11/logback-classic-1.0.11-sources.jar"/>
   <classpathentry kind="var" path="M2_REPO/ch/qos/logback/logback-core/1.0.11/logback-core-1.0.11.jar" sourcepath="M2_REPO/ch/qos/logback/logback-core/1.0.11/logback-core-1.0.11-sources.jar"/>
   <classpathentry kind="var" path="M2_REPO/uk/ac/ebi/pride/tools/mgf-parser/1.2.10/mgf-parser-1.2.10.jar" sourcepath="M2_REPO/uk/ac/ebi/pride/tools/mgf-parser/1.2.10/mgf-parser-1.2.10-sources.jar"/>
-  <classpathentry kind="var" path="M2_REPO/uk/ac/ebi/pride/utilities/ms-data-core-api/2.0.4/ms-data-core-api-2.0.4.jar" sourcepath="M2_REPO/uk/ac/ebi/pride/utilities/ms-data-core-api/2.0.4/ms-data-core-api-2.0.4-sources.jar"/>
+  <classpathentry kind="var" path="M2_REPO/uk/ac/ebi/pride/utilities/ms-data-core-api/2.0.5-SNAPSHOT/ms-data-core-api-2.0.5-SNAPSHOT.jar" sourcepath="M2_REPO/uk/ac/ebi/pride/utilities/ms-data-core-api/2.0.5-SNAPSHOT/ms-data-core-api-2.0.5-SNAPSHOT-sources.jar"/>
   <classpathentry kind="var" path="M2_REPO/uk/ac/ebi/pride/tools/ms2-parser/1.2.2/ms2-parser-1.2.2.jar" sourcepath="M2_REPO/uk/ac/ebi/pride/tools/ms2-parser/1.2.2/ms2-parser-1.2.2-sources.jar"/>
   <classpathentry kind="var" path="M2_REPO/msv/msv/20050913/msv-20050913.jar" sourcepath="M2_REPO/msv/msv/20050913/msv-20050913-sources.jar"/>
   <classpathentry kind="var" path="M2_REPO/uk/ac/ebi/pride/tools/mzdata-parser/1.2.1/mzdata-parser-1.2.1.jar" sourcepath="M2_REPO/uk/ac/ebi/pride/tools/mzdata-parser/1.2.1/mzdata-parser-1.2.1-sources.jar"/>
