--- a/pom.xml
+++ b/pom.xml
@@ -17,14 +17,21 @@
     <dependency>
         <groupId>uk.ac.ebi.pride.utilities</groupId>
         <artifactId>ms-data-core-api</artifactId>
-        <version>2.0.4</version>
+        <version>2.0.5-SNAPSHOT</version>
    </dependency> 
     
   </dependencies>
   <repositories>
       <repository>
         <id>nexus-ebi-repo</id>
-        <url>http://www.ebi.ac.uk/intact/maven/nexus/content/repositories/ebi-repo</url>
+        <url>http://www.ebi.ac.uk/intact/maven/nexus/content/repositories/ebi-repo-snapshots</url>
+        <releases>
+        	<enabled>false</enabled>
+        </releases>
+        <snapshots>
+        	<enabled>true</enabled>
+        	<updatePolicy>daily</updatePolicy>
+    	</snapshots>
       </repository>
   </repositories>
 
