--- a/pom.xml
+++ b/pom.xml
@@ -54,6 +54,25 @@
           </descriptorRefs>
         </configuration>
       </plugin>
+      
+      
+      <plugin>
+        <!-- Build an executable JAR -->
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-jar-plugin</artifactId>
+        <version>2.4</version>
+        <configuration>
+            <archive>
+            <manifest>
+                <addClasspath>true</addClasspath>
+                <classpathPrefix>lib/</classpathPrefix>
+                <mainClass>edu.ucsd.mingprideconverter.App</mainClass>
+            </manifest>
+            </archive>
+        </configuration>
+      </plugin>
+      
+      
     </plugins>
   </build>
 
