--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,10 @@
         	<updatePolicy>daily</updatePolicy>
     	</snapshots>
       </repository>
+      <repository>
+        <id>nexus-ebi-repo2</id>
+        <url>http://www.ebi.ac.uk/intact/maven/nexus/content/repositories/ebi-repo</url>
+      </repository>
   </repositories>
 
   <build>
